[gd_scene load_steps=3 format=2]

[ext_resource path="res://Units/Barrels/Bullets/Bullet.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="Bullet" type="Node2D" groups=[
"Bullet",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="area_exited" from="DamageArea" to="." method="_on_DamageArea_area_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
